@@ -344,10 +344,6 @@ killproc()
                         sleep 1
                         # Check again, and fail if still running
                         kill -0 "${pid}" 2> /dev/null && return 1
-                    else
-                        # just check one last time and if still alive, fail
-                        sleep 1
-                        kill -0 "${pid}" 2> /dev/null && return 1
                     fi
                 fi
             done
