@@ -50,8 +50,20 @@
 # Skip reading from the console
 #HEADLESS=yes
 
-# Skip cleaning /tmp
-#SKIPTMPCLEAN=yes
+# Speed up boot without waiting for settle in udev_retry
+#OMIT_UDEV_RETRY_SETTLE=yes
+
+# Write out fsck progress if yes
+#VERBOSE_FSCK=no
+
+# Speed up boot without waiting for settle in udev
+#OMIT_UDEV_SETTLE=y
+
+# Speed up boot without waiting for settle in udev_retry
+#OMIT_UDEV_RETRY_SETTLE=yes
+
+# Skip cleaning /tmp if yes
+#SKIPTMPCLEAN=no
 
 # For setclock
 #UTC=1
